feat:updated verify certificate and aboutpage

--- a/src/about.html
+++ b/src/about.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sahih.ae - Digitize Your Credentials/about</title>
     <!-- link to dist folder -->
-    <title>Sahih.ae - Digitize Your Credentials</title>
     <link rel="icon" type="image/x-icon" href="/images/faviconcmprsd.png">
   
     <!-- CDN for swiper animation of testimonial section-->
@@ -198,8 +197,74 @@
 </section>
 
 
+  <!-- Why Trust Us -->
+  <section class="text-center py-12 bg-[#f4f1f1]">
+    <div class="text-center mb-12">
+      <h2 class="text-3xl md:text-4xl font-bold">
+        <span class="underline underline-offset-8 decoration-[#e5c200]">Why </span>Trust Us
+      </h2>
+    </div>
+  
+    <!-- First Row of Images with Text -->
+    <div class="flex flex-wrap justify-center gap-8 md:gap-28 mb-8">
+      <!-- Certificates Issued -->
+      <div class="text-center w-40 md:w-auto">
+        <img src="/images/certificate-issued.png" alt="Certificate Issued" class="w-16 h-16 md:w-24 md:h-24 mx-auto mb-4 object-contain">
+        <h1 class="text-2xl md:text-4xl font-semibold counter" data-target="1000" data-suffix="+">0</h1>
+        <p class="text-sm md:text-base">Certificates Issued</p>
+      </div>
+  
+      <!-- Countries Served -->
+      <div class="text-center w-40 md:w-auto">
+        <img src="/images/gloabl-1000.png" alt="Countries Served" class="w-16 h-16 md:w-24 md:h-24 mx-auto mb-4 object-contain">
+        <h1 class="text-2xl md:text-4xl font-semibold counter" data-target="100" data-suffix="+">0</h1>
+        <p class="text-sm md:text-base">Countries Served</p>
+      </div>
+  
+      <!-- Trusted Companies -->
+      <div class="text-center w-40 md:w-auto">
+        <img src="/images/trusted-100.png" alt="Trusted Companies" class="w-16 h-16 md:w-24 md:h-24 mx-auto mb-4 object-contain">
+        <h1 class="text-2xl md:text-4xl font-semibold counter" data-target="100" data-suffix="+">0</h1>
+        <p class="text-sm md:text-base">Trusted Companies</p>
+      </div>
+  
+      <!-- Verification Accuracy -->
+      <div class="text-center w-40 md:w-auto">
+        <img src="/images/cerificate-1000.png" alt="Verification Accuracy" class="w-16 h-16 md:w-24 md:h-24 mx-auto mb-4 object-contain">
+        <h1 class="text-2xl md:text-4xl font-semibold counter" data-target="99.9" data-suffix="%">0</h1>
+        <p class="text-sm md:text-base">Verification Accuracy</p>
+      </div>
+    </div>
+  
+    <!-- Trusted by Leading Companies -->
+    <h3 class="text-2xl md:text-3xl font-semibold mt-20">
+      Trusted by Leading Companies <span class="text-[#e5c200]">Worldwide</span>
+    </h3>
+    <div class="overflow-hidden mt-8 mb-2">
+      <div class="marquee flex gap-8">
+        <!-- Logos -->
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 1.png" alt="Company 1"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 2.png" alt="Company 2"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 3.png" alt="Company 3"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 5.png" alt="Company 4"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 6.png" alt="Company 5"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 1.png" alt="Company 1"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 2.png" alt="Company 2"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 3.png" alt="Company 3"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 5.png" alt="Company 4"></div>
+        <div class="logo-card w-20 md:w-32"><img src="/images/logo-companies 6.png" alt="Company 5"></div>
+      </div>
+    </div>
+  </section>
+  
+  
+
+
+    <footer>
     <div id="footer"></div>
-    <script type="module" src="scripts/Script.js"></script>
+    </footer>
+
+<script type="module" src="scripts/Script.js"></script>
 
 </body>
 </html>
