--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 
   <!-- global postcss configuration -->
   <link rel="stylesheet" href="/dist/main.css">
-
+  <!-- local styles -->
   <link rel="stylesheet" href="styles/style.css">
   <link rel="stylesheet" href="styles/Animations.css">
 </head>
